# ChangeLog for sys-apps/debianutils
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/debianutils/ChangeLog,v 1.139 2009/11/16 22:47:26 jer Exp $

*debianutils-3.2.2 (16 Nov 2009)

  16 Nov 2009; Jeroen Roovers <jer@gentoo.org> +debianutils-3.2.2.ebuild:
  Version bump.

  14 Aug 2009; Jeroen Roovers <jer@gentoo.org>
  -files/debianutils-2.16.2-palo.patch,
  -files/debianutils-2.28.2-mkboot-quiet.patch,
  -files/debianutils-2.28.2-no-bs-namespace.patch,
  -debianutils-2.28.5.ebuild, -debianutils-2.29.ebuild,
  -debianutils-2.30.ebuild, -debianutils-2.31.ebuild,
  -debianutils-3.0.1.ebuild, -debianutils-3.0.2.ebuild,
  -debianutils-3.1.ebuild, -debianutils-3.1.1.ebuild:
  Remove old.

*debianutils-3.2.1-r1 (11 Aug 2009)

  11 Aug 2009; Jeroen Roovers <jer@gentoo.org> -debianutils-3.2.1.ebuild,
  +debianutils-3.2.1-r1.ebuild,
  +files/debianutils-3.2.1-no-bs-namespace.patch:
  Redo the namespace patch.

*debianutils-3.2.1 (11 Aug 2009)

  11 Aug 2009; Jeroen Roovers <jer@gentoo.org> +debianutils-3.2.1.ebuild:
  Version bump.

  13 Jul 2009; Joseph Jezak <josejx@gentoo.org> debianutils-3.1.3.ebuild:
  Marked ppc stable for bug #273060.

*debianutils-3.2 (05 Jul 2009)

  05 Jul 2009; Jeroen Roovers <jer@gentoo.org> +debianutils-3.2.ebuild:
  Version bump.

  24 Jun 2009; Raúl Porcel <armin76@gentoo.org> debianutils-3.1.3.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #273060

  19 Jun 2009; Brent Baude <ranger@gentoo.org> debianutils-3.1.3.ebuild:
  stable ppc64, bug 273060

  16 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  debianutils-3.1.3.ebuild:
  Stable on alpha, bug #273060

  10 Jun 2009; Markus Meier <maekke@gentoo.org> debianutils-3.1.3.ebuild:
  amd64/x86 stable, bug #273060

  09 Jun 2009; Jeroen Roovers <jer@gentoo.org> -debianutils-2.28.2.ebuild,
  -debianutils-2.28.4.ebuild:
  Remove old.

  09 Jun 2009; Jeroen Roovers <jer@gentoo.org> debianutils-3.1.3.ebuild: