@@ -4,10 +4,12 @@ AUX debianutils-3.2.1-no-bs-namespace.patch 966 RMD160 ed1bc623794eb8d6bb1ab026c
 DIST debianutils_3.1.3.tar.gz 132108 RMD160 b38fdc56519ce22627d0dd320455b89460eafea9 SHA1 6de01d71eec751db913b8ad66e90fb4e63b7b27b SHA256 83861a6c28166b0c84ab248d44fcd19d8c3940fa43f9450a7a8c9870af59ae8f
 DIST debianutils_3.2.1.tar.gz 134180 RMD160 dcacd512b4987c84df6e8710402e982a304a2b2e SHA1 9182e98a77f0b1c2a0c89c0a39564c059156621e SHA256 0c9e2619060053b6721e74ab34d5ed81c0f9bb462c6b16b616898f5ac8e0124b
 DIST debianutils_3.2.2.tar.gz 138154 RMD160 3512820a229db8387e4b71e299b8b65f85653059 SHA1 9863143364459ba2496548836e3f68230e1c3036 SHA256 03d73b5f621aa432f683eb96b1080844fcc6135e6b64f43b9c34f82e74175e7e
+DIST debianutils_3.2.3.tar.bz2 106990 RMD160 acd89b9d7d8f7346fed0a16aafd55f6b65c2b461 SHA1 d82ebddb31c402c94e93f6c4663b15307ad1311b SHA256 3c6dee491bb93e92f0e3da8065eddf937f6b584ad72cd09b1e2bd05b66be07b9
 DIST debianutils_3.2.tar.gz 132131 RMD160 a88c3bae4d7bb36210dd65889e5c7a83cb9663a0 SHA1 3ffa2eefd09b2393cc6a741800904faa2c3a2277 SHA256 025271efeb6c0d7bdabef229c36198786d08b0b0a3cb75f81a9ae88692cb02f4
 EBUILD debianutils-3.1.3.ebuild 1364 RMD160 4ec4e7ad03c97d8d6dede3f1df2c8ac68381734f SHA1 b0844fd6703319155ec5bea7cdc8181997da9ae7 SHA256 77d7949d07b1080bf9750dbe3b37d354d1502bcb7d3257246613038e316d9e21
 EBUILD debianutils-3.2.1-r1.ebuild 1369 RMD160 e05fafa3b37a1808c54591cc2811a53a70c7fbfb SHA1 e30aee81471aaf2d928b90e0efe0cc34fb49c202 SHA256 63986722c5b6e5f97515eff6d0fee1016edba4353c119c85065be35dde3a9d63
 EBUILD debianutils-3.2.2.ebuild 1373 RMD160 43388699688450b1baf7a8bafb6ad3a228e8ac39 SHA1 05a930f8c5f4338182d15cb545dd3f38835e1af2 SHA256 0f3b8ede627ca6ed94a9493cd534fd7a36982707a6cd4d7293b5575872e0681c
+EBUILD debianutils-3.2.3.ebuild 1374 RMD160 cc3abd8346b9970d23842e9a88a556af4ae7fc0e SHA1 b2d0cac81a90d6c0708e4410b8eee7ecf1dbaa89 SHA256 e9077f997d17676d61e563e1745feaa33d65e6b77f5ed430b6553ff29d05b5e2
 EBUILD debianutils-3.2.ebuild 1370 RMD160 9081d2fb6d224e141c2b3135fc7ed0424fb2cf67 SHA1 1b083427b2a2467857f6b0365f673f7a52a3daff SHA256 4a32766c3cf32894141bf97eda2f23d144fc691143482d3acacff9341e3231f4
-MISC ChangeLog 19403 RMD160 60ecba3f2ab9ccfa5e1cf8eede2fbd243bdbb955 SHA1 7667986b4dfd0be80d2824d5e086ef1f55b0f66c SHA256 6a618dc182a62d00fa46bd845b8b4dfdc158c6b3d91a984c986adadc348ea534
+MISC ChangeLog 19528 RMD160 283513d963ce71000dc6b73a765b4f5033e885e8 SHA1 f161225313fdfc944a3c345b836b1a7ba81445a6 SHA256 f96036abda9640ea8084a4cdcafdc9604b6c0dcc3ed3e69374b81977fb1ea617
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
