@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/debianutils
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/debianutils/ChangeLog,v 1.139 2009/11/16 22:47:26 jer Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/debianutils/ChangeLog,v 1.140 2010/05/01 05:25:47 jer Exp $
+
+*debianutils-3.2.3 (01 May 2010)
+
+  01 May 2010; Jeroen Roovers <jer@gentoo.org> +debianutils-3.2.3.ebuild:
+  Version bump.
 
 *debianutils-3.2.2 (16 Nov 2009)
 
